syntax = "proto3";
import "types.proto";
package bs.room;
option go_package ="/room";

enum CMDRoom {
	IDNone					= 0;
	IDGetChairReq			= 1;			//进入房间
	IDGetChairRsp			= 2;			//进入房间
	IDUserActionReq			= 3;			//用户动作
	IDUserActionRsp			= 4;			//用户动作
	IDExitReq				= 5;			//离开房间
	IDExitRsp				= 6;			//离开房间
	IDUserStatus			= 7;			//状态变化
}

message GetChairReq{
	uint32			table_id = 1;
	uint32			chair_id = 2;
	string			password = 3;
}

message GetChairRsp{
	uint32						app_id = 1;
	types.ErrorInfo			err_info = 99;
}

enum ActionType {
	None		= 0;
	GetChair	= 2;
	Ready		= 3;
	Cancel		= 4;
}
	
message UserActionReq{
	ActionType action = 1;
}

message UserActionRsp{
	ActionType 		action = 1;
	types.ErrorInfo	err_info = 99;
}

message ExitReq{
}

message ExitRsp{
	types.ErrorInfo	err_info = 99;
}

message UserStatus{
	types.UserRoomInfo		user_info = 1;         	//用户信息
}