syntax = "proto3";
//import "types.proto";
package bs.table;
option go_package ="/table";

enum CMDTable {
	IDNone						= 0;
	IDApplyReq					= 1;			//
	IDApplyRsp					= 2;			//
	IDReleaseReq				= 3;			//
	IDReleaseRsp				= 4;			//
	IDSetPlayerToTableReq		= 5;			//
	IDSetPlayerToTableRsp		= 6;			//
	IDMatchTableReq				= 7;			//
	IDMatchTableRsp				= 8;			//
	IDGameMessage				= 9;			//
	IDWriteGameScore			= 10;			//
	IDGameOver					= 11;			//
}

message ApplyReq{
	uint32 apply_count = 1;
}

message ApplyRsp{
	uint32 apply_count = 1;
	repeated uint64 table_ids = 2;
}

message ReleaseReq{
	uint32 release_count = 1;
	repeated uint64 table_ids = 2;
}

message ReleaseRsp{
	
}

message SetPlayerToTableReq{
	uint64 table_id = 1;
	uint64 user_id = 2;
	uint32 seat_id = 3;
	uint64 gateconnid = 4;
}

message SetPlayerToTableRsp{
}

message MatchTableReq{
	uint64 	table_id = 1;
	repeated uint64 	players = 2;
}

message MatchTableRsp{
	
}

message GameMessage{
	uint32 sub_cmdid =1;
	bytes 	data = 2;
}

message WriteGameScore{
	uint64 table_id = 1;
}

message GameOver{
	uint64 table_id = 1;
}